example/nginx-ingress-vhost/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-8088
spec:
  ports:
    - port: 8088
      targetPort: 80
  selector:
    app: nginx-test
